--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # Core App Dependencies
 Flask==3.0.3
 
+# Cross-Origin Request Sharing
+flask-cors==4.0.0
+
 # ML and Text Processing
 scikit-learn==1.6.1
 joblib==1.4.2
